--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html>
     <head>
         <!-- Load the latest Swagger UI code and style from npm using unpkg.com -->
-        <script src="https://unpkg.com/swagger-ui-dist@4/swagger-ui-bundle.js"></script>
-        <link rel="stylesheet" type="text/css" href="https://unpkg.com/swagger-ui-dist@4/swagger-ui.css"/>
+        <script src="https://unpkg.com/swagger-ui-dist@4.19.1/swagger-ui-bundle.js"></script>
+        <link rel="stylesheet" type="text/css" href="https://unpkg.com/swagger-ui-dist@4.19.1/swagger-ui.css"/>
         <title>OAS</title>
     </head>
     <body>
         <div id="swagger-ui"></div> <!-- Div to hold the UI component -->
         <script>
+            document.addEventListener('DOMContentLoaded', function () {
             window.onload = function () {
                 // Begin Swagger UI call region
                 const ui = SwaggerUIBundle({
@@ -23,8 +24,11 @@
                         SwaggerUIBundle.plugins.DownloadUrl
                     ],
                 })
+                
                 window.ui = ui
+                
             }
+        });
         </script>
     </body>
 </html>
